@@ -1,3 +1,7 @@
+Fri 22 Oct 2004 22:27:05 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
+	o added 'no-editor' FileSelector (only a button with configurable
+	  caption)
+
 Tue 19 Oct 2004 23:23:28 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
 	o Konsole now uses TextEdit widget
 	o improved EOL handling in Konsole
